[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
cliclack = "0.2.5"
seed-maker = { path = "../seed-maker" }
serde_json = { workspace = true }
strum = { workspace = true }
