[package]
name = "seed-maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
rayon = "1.10.0"
sdv = { git = "https://github.com/konkers/sdv-rs", rev = "42f91be412da4567e7ea356152060817832ed5af" }
strum = { version = "0.24", features = ["derive"] }
serde = { workspace = true }
rayon-progress = "1.0.0"

[dev-dependencies]
serde_json = { workspace = true }
